[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["atsuyoshi funahashi <atsuyoshi.python@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.18.2"
scipy = "1.4.1"
numba = "0.48.0"
networkx = "2.4"
scikit-learn = "0.22.2.post1"
online-judge-tools = "^11.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
