[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["atsuyoshi funahashi <atsuyoshi.python@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "1.24.1"
scipy = "1.10.1"
networkx = "3.0"
pandas = "1.5.2"
scikit-learn = "1.2.0"
numba = "0.57.0"
online-judge-tools = "^11.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
